--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -11,7 +11,7 @@
   web_hooks: 1
   ahoy: 1
 :queues:
-  - default_project_data_operations
-  - default_project_web_hooks
+  - eya_data_operations
+  - eya_web_hooks
   - ahoy
   - default
